# p3-edge

./: .gitignore  README.md  README_FORECASTING.md  pyproject.toml  requirements-gemini.txt  requirements.txt
assets/: README.md
config/: app_config.json  credentials.enc
data/: amazon_grocery_items.csv
docs/: DATABASE_POPULATION.md  ENCRYPTED_LOGGING.md  LLM_CONFIGURATION.md  LLM_SETUP.md  LLM_TESTING_GUIDE.md  NEW_FEATURES.md  PHASE3_FORECASTING.md  README_SMART_FRIDGE.md  SMART_FRIDGE_INTEGRATION.md  TESTING_QUICKSTART.md
plan/: My-Plan.txt  TECHNICAL_PLAN.md  Task.txt
scripts/: download_model.py  init_db.py  launch_smart_fridge_demo.py  migrate_add_agent_memory.py  populate_db_vegetarian.py  pretrain_forecasting_models.py  test_ecommerce.py  test_forecasting.py  test_llm.py  test_llm_interactive.py  test_ocr_llm.py  test_smart_fridge_integration.py  view_logs.py
src/: main.py
src/api/: __init__.py  phone_app.py
src/config/: __init__.py  config_manager.py
src/database/: db_manager.py  schema.sql
src/forecasting/: __init__.py  online_trainer.py  state_space_model.py
src/ingestion/: __init__.py  receipt_ocr.py  samsung_fridge_simulator.py  smart_fridge_simulator.py
src/models/: __init__.py  audit_log.py  inventory.py  order.py  preference.py  tool_models.py
src/services/: __init__.py  autonomous_agent.py  base_llm_service.py  cart_service.py  forecast_service.py  gemini_llm_service.py  inventory_service.py  llm_factory.py  llm_service.py  memory_service.py  ollama_llm_service.py  (+3 more)
tests/: test_ecommerce.py  test_forecasting.py  test_llm_integration.py  test_ocr_llm.py
(+37 files in other folders)
